# rot-reducer

./: Cargo.toml  README.md
docs/: csa-extension.md  csa-impl-plan.md  invariants.md  state-machine.html  state-machine.md  structure.md  verification-model.md
examples/: board.rs  pw_task.rs
src/: lib.rs
